[gd_scene load_steps=13 format=3 uid="uid://dfpfsvojoof3s"]

[ext_resource type="Texture2D" uid="uid://dymywmcaod4oj" path="res://Scenes/buffs/enegry_buff.png" id="1_6o5uu"]
[ext_resource type="Script" uid="uid://cnqpkijd5pm6u" path="res://Scripts/base_modifier.gd" id="1_8k31m"]
[ext_resource type="FontFile" uid="uid://c4vcsi1ny25xd" path="res://Fonts/MegamaxJonathanToo-YqOq2.ttf" id="2_ghk52"]
[ext_resource type="Texture2D" uid="uid://cefm1dp1en15c" path="res://Scenes/coin.png" id="3_mf6co"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0kbf0"]
atlas = ExtResource("3_mf6co")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7rlo"]
atlas = ExtResource("3_mf6co")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuadd"]
atlas = ExtResource("3_mf6co")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdva"]
atlas = ExtResource("3_mf6co")
region = Rect2(0, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxc7l"]
atlas = ExtResource("3_mf6co")
region = Rect2(10, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ewva"]
atlas = ExtResource("3_mf6co")
region = Rect2(20, 10, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vu8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kbf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7rlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuadd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxc7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ewva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kbf0")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d20d"]
size = Vector2(56, 56)

[node name="EnegryBuff" type="Node2D" groups=["mods"]]
script = ExtResource("1_8k31m")
id = 1
value = 5

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = -60.0
offset_right = -4.0
offset_bottom = -35.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_ghk52")
theme_override_font_sizes/font_size = 25
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Coin" type="AnimatedSprite2D" parent="Label"]
texture_filter = 1
position = Vector2(38, 12)
scale = Vector2(2.06835, 2.06835)
sprite_frames = SubResource("SpriteFrames_6vu8j")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "res://Textures/UI/coin.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "393c94b6306918ef5cd76a079a9792e8"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.88057, 1.88057)
texture = ExtResource("1_6o5uu")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Textures/UI/buffs/enegry_buff.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "c85ea3dde700e5800520cb2588df6d28"

[node name="Area2D" type="Area2D" parent="." groups=["modificators"]]
process_mode = 3
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3d20d")

[node name="Info" type="ColorRect" parent="."]
visible = false
offset_left = -57.0
offset_top = -172.0
offset_right = 59.0
offset_bottom = -36.0
color = Color(0.19, 0.19, 0.19, 0.741176)

[node name="Label" type="Label" parent="Info"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 116.0
offset_bottom = 135.0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_ghk52")
theme_override_font_sizes/font_size = 13
text = "GENERATOR

Increase
energy
rate

x1.5 current"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -30.0
offset_top = 29.0
offset_right = 22.0
offset_bottom = 54.0
scale = Vector2(1.16229, 1.16229)
theme_override_font_sizes/font_size = 12
text = "SELL"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
